cargo-features = ["edition2024"]

[package]
name = "kimlikdao-node"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "crate_server"
path = "rust/crate_server/main.rs"

[dependencies]
arrayvec = "0.7.6"
hyper = { version = "0.14.12", features = ["http1", "server", "tcp"] }
lazy_static = "1.5.0"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
